popup dialog alignment fixed

--- a/src/app/modules/shared/components/view-documents-dialog/view-documents-dialog.component.scss
+++ b/src/app/modules/shared/components/view-documents-dialog/view-documents-dialog.component.scss
@@ -1,8 +1,11 @@
-.dialog-content {
-  max-height: 650px;
-  overflow-y: auto;
+.bdrBtm{
+  border-bottom: 1px solid #cccccc;
 }
-
+.rgtClos {
+  font-size: 30px;
+  position: absolute;
+  right: 0px;
+}
 .breadcrumb {
   background-color: #ffffff !important;
 }
